# Aerolteasy

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  DEPLOYMENT.md  NETWORKING.md  README.md  SETUP.md  TESTING_NETWORKING.md
Mod/: .gitignore  NETWORKING_IMPLEMENTATION.md  RoR2DevTool.cs  RoR2DevTool.csproj
Mod/Commands/: BaseCommand.cs  IDevCommand.cs
Mod/Commands/DebugCommands/: ClearMockDataCommand.cs  DebugCharacterDefaultsCommand.cs  DebugCharacterIconsCommand.cs  DebugESPDataCommand.cs  DebugInteractableSpawnCardsCommand.cs  DebugInteractablesCommand.cs  DebugItemCatalogCommand.cs  DebugItemsCommand.cs  DebugMonstersCommand.cs  DebugPlayerItemsCommand.cs  DisableESPOverlayCommand.cs  MockGameStateCommand.cs  RefreshStateCommand.cs  SetVerboseLoggingCommand.cs  (+2 more)
Mod/Core/: DevCommand.cs
Mod/ESP/: ESPConfig.cs
Mod/Models/: GameState.cs  NetworkedCommand.cs  PermissionLevel.cs  PermissionRequest.cs  RunData.cs
Mod/Networking/: DevToolNetworkManager.cs  NetworkExtensions.cs  NetworkMessages.cs  RoR2DevToolNetworkManager.cs
Mod/Services/: CommandProcessor.cs  ESPOverlayService.cs  GameStateService.cs  HttpServer.cs  IApiEndpoint.cs  NetworkingService.cs  PermissionService.cs  SSEService.cs  UILauncherService.cs
Mod/Utils/: ReflectionExtensions.cs
WebUI-Svelte/: .gitignore  BUILD.md  NETWORKING_GUIDE.md  TROUBLESHOOTING.md  UI_NETWORKING_CHANGES.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
WebUI-Svelte/src/: App.svelte  app.css
WebUI-Svelte/src-tauri/: Cargo.toml  tauri.conf.json
WebUI-Svelte/src-tauri/src/: main.rs
(+108 files in other folders)
