[package]
name = "ror2-devtool"
version = "1.0.0"
description = "Risk of Rain 2 Development Tool"
authors = ["RoR2 DevTool Team"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "ror2_devtool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.2", features = [] }
tauri-plugin-log = "2"

# Optimize for smaller binary size
[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Better optimization
panic = "abort"     # Smaller binary
strip = true        # Strip symbols
